--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node dist/index.js"
+    "prestart": "tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
